--- a/demos/.eslintrc.json
+++ b/demos/.eslintrc.json
@@ -4,7 +4,7 @@
   "parserOptions": {
     "ecmaVersion": 2020,
     "sourceType": "module",
-    "project": "./demos/tsconfig.json"
+    "project": "./*/tsconfig.json"
   },
   "extends": [
     "standard",
@@ -15,10 +15,11 @@
   ],
   "rules": {
     "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": ["error"],
+    "@typescript-eslint/no-unused-vars": "error",
     "no-useless-constructor": "off",
     "@typescript-eslint/no-useless-constructor": "error",
     "@typescript-eslint/explicit-function-return-type": "warn",
     "@typescript-eslint/no-explicit-any": "error"
-  }
+  },
+  "ignorePatterns": ["jest.config.ts"]
 }
