--- a/demos/tsconfig.json
+++ b/demos/tsconfig.json
@@ -6,6 +6,6 @@
     "esModuleInterop": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "demos/jest.config.ts"],
   "exclude": ["node_modules", "dist"]
 }
