--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -3,7 +3,7 @@ name: API CI
 on:
   push:
     paths:
-      - "./api/**"
+      - "api/**"
       - ".github/workflows/api-ci.yml"
 
 defaults:
@@ -11,21 +11,21 @@ defaults:
     working-directory: ./api
 
 jobs:
-  build:
-    unit-test:
-      runs-on: ubuntu-latest
-      steps:
-        - name: Checkout
-          uses: actions/checkout@v2
-        - name: Use Node.js
-          uses: actions/setup-node@v2
-          with:
-            node-version: "16"
-            cache: 'npm'
-            cache-dependency-path: '**/package-lock.json'
-        - name: Install dependencies
-          shell: bash
-          run: npm ci
-        - name: Run tests
-          shell: bash
-          run: npm run test
+  unit-test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "16"
+          cache: "npm"
+          cache-dependency-path: "**/package-lock.json"
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run tests
+        run: npm run test
