--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -1,31 +1,75 @@
 name: API CI
 
+#on: [push]
 on:
   push:
     paths:
-      - "api/**"
+      - "./api/**"
       - ".github/workflows/api-ci.yml"
+
 
 defaults:
   run:
     working-directory: ./api
 
 jobs:
+  linter:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup Nodejs
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
+          cache: 'npm'
+          cache-dependency-path: ./api/package-lock.json
+      - name: install
+        shell: bash
+        run: npm ci
+      - name: run linter
+        shell: bash
+        run: npm run lint
   unit-test:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v2
-
-      - name: Setup Node.js
+      - name: Setup Nodejs
         uses: actions/setup-node@v2
         with:
-          node-version: "16"
-          cache: "npm"
-          cache-dependency-path: "**/package-lock.json"
-
-      - name: Install dependencies
+          node-version: 16
+          cache: 'npm'
+          cache-dependency-path: ./api/package-lock.json
+      - name: install
+        shell: bash
         run: npm ci
-
-      - name: Run tests
+      - name: run unit test
+        shell: bash
         run: npm run test
+  e2e:
+    runs-on: ubuntu-latest
+    container:
+      image: node:16
+
+    services:
+      mongo-e2e:
+        image: mongo:4.4
+        ports:
+          - 27017:27017
+        env:
+          MONGO_INITDB_ROOT_USERNAME: dev
+          MONGO_INITDB_ROOT_PASSWORD: dev123
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: install
+        shell: bash
+        run: npm ci
+      - name: run e2e
+        shell: bash
+        run: npm run test:e2e
+        env:
+          MONGO_DB_NAME: demo
+          MONGO_URL: mongodb://dev:dev123@localhost:27017?retryWrites=true&writeConcern=majority
